# vkpython

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
src/pyVulkan/: config.py  instance.py  main.py  vk_logging.py
test/: test_vulkan.py
