[project]
name = "pyvulkan"
version = "0.0.1"
authors = [
  { name="Brendon McCool", email="brendonmccool@gmail.com" },
]
description = "Python based Vulkan utilities"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/bmccool/pyVulkan"